plonetheme/barceloneta/theme/less/barceloneta-compiled.css
/* ... */
.tooltips.active {
  opacity: 1;
  transition: opacity .2s ease .5s;
}
.jqtree-tree {
  list-style: none outside;
  margin-bottom: 0;
  padding: 0;
  padding-left: 18px;
}
.jqtree-tree .jqtree-toggler {
  left: -18px;
  font-size: 75%;
  top: 30%;
  position: absolute;
}
.jqtree-tree .jqtree-element {
  padding: 6px;
}
.jqtree-tree .jqtree-element:hover {
  background: #f8f8f9;
}
.jqtree-tree .jqtree-selected > .jqtree-element {
  background: #cccccc;
}
#portal-header {
  margin: 0 auto 15px;
  padding-top: 15px;
  margin-bottom: 20px;
}
#portal-header #portal-logo {
  float: left;
}
#portal-header #portal-languageselector {
  float: left;
  clear: both;
  display: inline-block;
  margin-right: 29px;
  padding-top: 5px;
}
#portal-header #portal-languageselector li {
  display: inline-block;
  margin-right: 10px;
}
#portal-header #portal-searchbox {
  padding-top: 20px;
  clear: left;
  width: 67%;
  position: absolute;
  z-index: 2;
  margin-left: 3px;
  margin-top: 55px;
  white-space: nowrap;
}
#portal-header #portal-searchbox .searchSection {
  display: none;
}
#portal-header #portal-searchbox [type="text"] {
  width: 100%;
  display: inline-block;
}
#portal-header #portal-searchbox [type="submit"] {
  display: none;
}
#portal-header #portal-searchbox label {
  font-size: 86.667%;
}
#portal-header #portal-searchbox form > div {
  font-size: 0;
}
#portal-header #portal-searchbox form > div > * {
  font-size: 14px;
}
@media (min-width: 768px) {
  #portal-header #portal-languageselector {
    float: right;
    clear: none;
  }
  #portal-header #portal-searchbox {
    position: relative;
    margin-top: 5px;
    margin-bottom: -5px;
    padding-top: 0;
    clear: none;
    float: right;
    max-width: 50%;
    width: 250px;
    white-space: nowrap;
  }
  #portal-header #portal-searchbox .searchSection {
    display: inherit;
  }
  #portal-header #portal-searchbox [type="text"] {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    width: calc(180px);
    display: inline-block;
  }
  #portal-header #portal-searchbox [type="submit"] {
    display: none;
    width: 70px;
    display: inline-block;
    margin-left: -1px;
    margin-top: -4px;
  }
  #portal-header #portal-searchbox label {
    font-size: 86.667%;
  }
  #portal-header #portal-searchbox form > div {
    font-size: 0;
  }
  #portal-header #portal-searchbox form > div > * {
    font-size: 14px;
  }
}
#portal-header:before,
#portal-header:after {
  content: " ";
  display: table;
}
#portal-header:after {
  clear: both;
}
.plone-nav {
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
}
.plone-nav > li {
  position: relative;
  display: block;
}
.plone-nav > li > a {
  position: relative;
  display: block;
  padding: 10px 15px;
  color: white;
  font-size: 17px;
}
.plone-nav > li > a:hover,
.plone-nav > li > a:focus {
  text-decoration: none;
  background-color: #9abdd6;
}
.plone-navbar {
  background-color: #007bb3;
  position: relative;
  min-height: 50px;
  margin-bottom: 20px;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.17);
}
.plone-navbar:before,
.plone-navbar:after {
  content: " ";
  display: table;
}
.plone-navbar:after {
  clear: both;
}
.plone-navbar-header:before,
.plone-navbar-header:after {
  content: " ";
  display: table;
}
.plone-navbar-header:after {
  clear: both;
}
@media (min-width: 768px) {
  .plone-navbar-header {
    float: left;
  }
}
.plone-navbar-collapse {
  overflow-x: visible;
  padding-right: 15px;
  padding-left: 15px;
  border-top: 1px solid transparent;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
  -webkit-overflow-scrolling: touch;
  display: none;
}
.plone-navbar-collapse.in {
  overflow-y: auto;
  display: block;
}
@media (min-width: 768px) {
  .plone-navbar-collapse {
    width: auto;
    border-top: 0;
    box-shadow: none;
  }
  .plone-navbar-collapse.plone-collapse {
    display: block !important;
    height: auto !important;
    padding-bottom: 0;
    overflow: visible !important;
  }
  .plone-navbar-collapse.in {
    overflow-y: visible;
  }
  .navbar-fixed-top .plone-navbar-collapse,
  .navbar-static-top .plone-navbar-collapse,
  .navbar-fixed-bottom .plone-navbar-collapse {
    padding-left: 0;
    padding-right: 0;
  }
}
.plone-navbar-toggle {
  z-index: 1;
  position: relative;
  float: right;
  margin-right: 3px;
  margin-top: 3px;
  margin-bottom: 3px;
  padding: 6px 10px;
  background-color: transparent;
  background-image: none;
  border: 1px solid white;
  border-radius: 4px;
  /*
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    border-radius: 1px;
    background: white;
    margin-top: 2px;
  }
  .icon-bar + .icon-bar {
    margin-top: 5px;
  }
  .icon-bar + .icon-bar + .icon-bar {
    margin-bottom: 3px;
  }
  //end burgerbar icon-bar
  */
}
.plone-navbar-toggle:focus {
  outline: 0;
}
.plone-navbar-toggle:hover {
  background-color: #6499c0;
  border-color: #4581ab;
}
.plone-navbar-toggle .icon-bar:after {
  content: "Menu";
  position: relative;
  color: white;
}
.plone-navbar-toggle .icon-bar + .icon-bar:after {
  content: "";
}
@media (min-width: 768px) {
  .plone-navbar-toggle {
    display: none;
  }
}
.plone-navbar-nav {
  margin: -1px -15px -1px;
}
.plone-navbar-nav > li > a {
  padding-top: 10px;
  padding-bottom: 10px;
  line-height: 20px;
}
.plone-navbar-nav > .selected > a,
.plone-navbar-nav > .selected > a:hover,
.plone-navbar-nav > .selected > a:focus {
  color: white;
  background-color: #9abdd6;
}
@media (min-width: 768px) {
  .plone-navbar-nav {
    float: left;
  }
  .plone-navbar-nav > li {
    float: left;
  }
  .plone-navbar-nav > li > a {
    padding-top: 15px;
    padding-bottom: 15px;
  }
  .plone-navbar-nav.navbar-right:last-child {
    margin-right: -15px;
  }
}
/* ... */

